build/test/lib/errors/invalid-array-items.mjs
export const name = "InvalidArrayItems";
export function createInvalidArrayItemsError(invalid) {
    return new Error(name);
}
